valid_tests/arrays/test8.go
// Test: Simple array access (read-only)
func main() {
    var numbers []int
    var x int
    x = numbers[0]
}
